add config file and make the base url global change the normal ui to material ui, complete the crud ops and bug fixes

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,3 +1,10 @@
 .page_header {
+  height: 45px;
   margin-top: 20px;
+  background-color: rgb(186, 119, 80);
+  text-align: end;
+  padding: 15px;
+}
+.home_icon {
+  margin-right: 15px;
 }
