--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -17,7 +17,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: rgb(67, 67, 65);
+  /* background-color: rgb(67, 67, 65); */
+  background-image: url(../../assets/4893732.webp);
 }
 
 .login_form {
