--- a/src/todos/components/editPage/editForm.css
+++ b/src/todos/components/editPage/editForm.css
@@ -5,6 +5,7 @@
   background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  /* padding-top: 30px; */
 }
 
 .edit_form {
@@ -33,6 +34,7 @@
   display: flex;
   justify-content: flex-end;
   margin-top: 20px;
+  gap: 10px;
 }
 
 .save_btn {
@@ -51,4 +53,18 @@
 h2 {
   font-size: 24px;
   margin-bottom: 20px;
+}
+
+.edit_page_inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.edit_page {
+  height: 100vh;
+  background-image: url("../../../assets/4893732.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 40px;
 }
