--- a/src/todos/components/homePage/homePage.css
+++ b/src/todos/components/homePage/homePage.css
@@ -3,6 +3,10 @@
   flex-wrap: wrap;
   justify-content: space-around;
   gap: 15px;
-  margin-top: 2rem;
+  padding-top: 2rem;
+  background-image: url("../../../assets/home.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
   /* margin-left: 10px; */
 }
