add some snackbar UI

--- a/src/todos/components/homePage/homePage.css
+++ b/src/todos/components/homePage/homePage.css
@@ -4,7 +4,8 @@
   justify-content: space-around;
   gap: 15px;
   padding-top: 2rem;
-  background-image: url("../../../assets/home.jpg");
+  background-image: url("../../../assets/4893732.webp");
+  /* background-color: rgb(31, 31, 31); */
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
