--- a/src/todos/components/todoHeader/todoHeader.css
+++ b/src/todos/components/todoHeader/todoHeader.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* background-color: #f1f1f1; */
-  background-image: url("../../../assets/header.jpg");
+  background-color: rgb(24, 24, 24);
+  /* background-image: url("../../../assets/header.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   padding: 10px;
